@@ -12,6 +12,8 @@ What's New in Python 3.0.2?
 Core and Builtins
 -----------------
 
+- Fixed SystemError triggered by "range([], 1, -1)".
+
 - Issue #5924: On Windows, a large PYTHONPATH environment variable
   (more than 255 characters) would be completely ignored.
 
